--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "GitHub Action to detect Shai-Hulud 2.0 supply chain attack in npm dependencies",
   "main": "dist/index.js",
+  "bin": {
+    "shai-hulud-detector": "./dist/cli/index.js"
+  },
   "scripts": {
-    "build": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "build": "npm run build:action && npm run build:cli",
+    "build:action": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "build:cli": "ncc build src/cli.ts -o dist/cli --source-map",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
@@ -23,7 +28,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@actions/glob": "^0.4.0"
+    "@actions/glob": "^0.4.0",
+    "commander": "^14.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
